# vibecoding_week_2

./: .gitignore  CLAUDE.md  LICENSE  README.md  catalog.json
.claude/plugins/feature-dev/.in_use/: 82960  87286
backend/: pyproject.toml
backend/app/: __init__.py  auth.py  chat_routes.py  chat_service.py  crud.py  database.py  main.py  models.py  routes.py  schemas.py
backend/app/api/: auth.py  documents.py
backend/data/templates/: .gitkeep  01-Mutual.json  01-nda.json  02-Mutual.json  02-employment-agreement.json  03-Cloud.json  03-master-services-agreement.json  04-Design.json  04-confidentiality-policy.json  05-Service.json  05-consulting-agreement.json  06-Professional.json  07-Partnership.json  08-Software.json  09-Data.json  10-Pilot.json  11-Business.json  12-AI.json
backend/tests/: __init__.py  test_render.py  test_templates.py
docs/: TEST_MANUAL.md
docs/superpowers/plans/: 2026-07-11-legal-document-templates.md
frontend/: .env.local.example  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/__tests__/: api.test.ts  download.test.ts  nda-pdf-document.test.tsx  setup.ts  validation.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/components/: my-documents-modal.tsx  providers.tsx  user-menu.tsx
frontend/components/chat/: chat-panel.tsx
frontend/components/nda/: nda-creator.tsx  nda-form.tsx  nda-pdf-document.tsx  nda-preview.tsx
frontend/contexts/: auth-context.tsx
frontend/e2e/: nda.spec.ts
frontend/hooks/: use-chat.ts  use-render.ts  use-template.ts
frontend/lib/: api-auth.ts  api.ts  types.ts
scripts/: convert_templates.py  start-mac.sh  stop-mac.sh
